III-1886 regex for website

--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -23,6 +23,7 @@
                    aria-describedby="organizer-website-status"
                    ng-change="validateWebsite()"
                    autocomplete="off"
+                   ng-pattern="/^(http\:\/\/|https\:\/\/)?([a-z0-9][a-z0-9\-]*\.)+[a-z0-9][a-z0-9\-]*$/"
                    required>
             <span class="fa fa-circle-o-notch fa-spin form-control-feedback" ng-show="showWebsiteValidation" aria-hidden="true"></span>
             <span id="organizer-website-status" class="sr-only">(warning)</span>
