III-1886 Show site is not unique for temporary database bug

--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -39,6 +39,9 @@
               gebruik <span ng-bind="firstOrganizerFound.name"></span> als organisatie
             </a>.
           </p>
+          <p class="alert alert-warning" ng-show="websiteNotUnique">
+            Dit adres is al gebruikt. Geef een unieke website op.
+          </p>
         </div>
       </div>
 
