--- a/src/event_form/components/calendar/form-event-calendar.component.html
+++ b/src/event_form/components/calendar/form-event-calendar.component.html
@@ -14,19 +14,19 @@
 <div class="calendar-timing-info">
     <div class="panel panel-default">
         <div class="panel-body">
-            <div class="calender-time-init" ng-show="calendar.showBootstrapTimeSpans && calendar.type === 'single'">
+            <div class="calender-time-init" ng-show="calendar.noFirstDateChosen && calendar.type === 'single'">
                 <div class="form-group">
                   <label for="time-span-init-start-date">Wanneer start je evenement?</label>
                  </div>
                 <div class="form-inline">
                  <div class="date">
-                   <udb-form-calendar-datepicker ng-model="calendar.bootstrapDate" ng-change="calendar.delayedTimeSpanChanged()">
+                   <udb-form-calendar-datepicker ng-model="calendar.bootstrapDate">
                    </udb-form-calendar-datepicker>
                  </div>
                  <button type="button" ng-click="calendar.confirmBootstrap()" class="btn btn-primary">Bevestigen</button>
               </div>
             </div>
-            <div class="calendar-time-spans" ng-if="!calendar.weeklyRecurring && !calendar.showBootstrapTimeSpans">
+            <div class="calendar-time-spans" ng-if="!calendar.weeklyRecurring && !calendar.noFirstDateChosen">
                 <div class="calendar-time-span" ng-repeat="timeSpan in calendar.timeSpans track by $index">
                     <span ng-show="calendar.timeSpans.length > 1" aria-hidden="true" ng-click="calendar.removeTimeSpan(timeSpan)" class="close">×</span>
                     <div class="dates">
