--- a/src/event_form/components/calendar/form-event-calendar.component.html
+++ b/src/event_form/components/calendar/form-event-calendar.component.html
@@ -23,7 +23,7 @@
                    <udb-form-calendar-datepicker ng-model="calendar.bootstrapDate">
                    </udb-form-calendar-datepicker>
                  </div>
-                 <button type="button" ng-click="calendar.confirmBootstrap()" class="btn btn-primary">Bevestigen</button>
+                 <button type="button" ng-click="calendar.confirmFirstDate()" class="btn btn-primary">Bevestigen</button>
               </div>
             </div>
             <div class="calendar-time-spans" ng-if="!calendar.weeklyRecurring && !calendar.noFirstDateChosen">
