III-2253 Check if form is pristine before validating

--- a/src/event_form/components/organizer-contact/organizer-contact.html
+++ b/src/event_form/components/organizer-contact/organizer-contact.html
@@ -30,8 +30,8 @@
         <div ng-switch="occ.newContact.type">
           <div ng-switch-when="url" class="form-group" ng-class="{ 'has-error': urlContactForm.url.$touched && urlContactForm.url.$invalid }">
               <ng-form name="urlContactForm">
-                  <input type="text" name="url" udb-http-prefix class="form-control" ng-model="occ.newContact.value" ng-pattern="/^(http\:\/\/|https\:\/\/)?([a-z0-9][a-z0-9\-]*\.)+[a-z0-9][a-z0-9\-]*$/" ng-model-options="{allowInvalid:true}" ng-change="occ.validateContact()" required>
-                  <div class="help-block" ng-messages="urlContactForm.url.$error" ng-show="urlContactForm.url.$touched">
+                  <input type="text" name="url" udb-http-prefix class="form-control" ng-model="occ.newContact.value" ng-pattern="/^(http\:\/\/|https\:\/\/)?([a-z0-9][a-z0-9\-]*\.)+[a-z0-9][a-z0-9\-]*$/" ng-model-options="{allowInvalid:true, updateOn: 'change'}" required>
+                  <div class="help-block" ng-messages="urlContactForm.url.$error" ng-show="!controller.isPristine && urlContactForm.url.$error">
                       <p ng-message="required">
                           Gelieve dit veld niet leeg te laten.
                       </p>
@@ -43,8 +43,8 @@
           </div>
           <div ng-switch-when="email" class="form-group" ng-class="{ 'has-error': mailContactForm.email.$touched && mailContactForm.email.$invalid }">
               <ng-form name="mailContactForm">
-                  <input type="text" name="email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" class="form-control" ng-model="occ.newContact.value" ng-model-options="{allowInvalid:true}" ng-change="occ.validateContact()" required>
-                  <div class="help-block" ng-messages="mailContactForm.email.$error" ng-show="mailContactForm.email.$touched">
+                  <input type="text" name="email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" class="form-control" ng-model="occ.newContact.value" ng-model-options="{allowInvalid:true, updateOn: 'change'}" required>
+                  <div class="help-block" ng-messages="mailContactForm.email.$error" ng-show="!controller.isPristine && mailContactForm.email.$error">
                       <p ng-message="required">
                           Gelieve dit veld niet leeg te laten.
                       </p>
@@ -56,8 +56,8 @@
           </div>
           <div ng-switch-default class="form-group" ng-class="{ 'has-error': phoneContactForm.phone.$touched && phoneContactForm.phone.$invalid }">
               <ng-form name="phoneContactForm">
-                  <input type="tel" name="phone" class="form-control" ng-model="occ.newContact.value" ng-pattern="/^[^a-zA-Z]*$/" ng-model-options="{allowInvalid:true}" required ng-change="occ.validateContact()">
-                  <div class="help-block" ng-messages="phoneContactForm.phone.$error" ng-show="phoneContactForm.phone.$touched">
+                  <input type="tel" name="phone" class="form-control" ng-model="occ.newContact.value" ng-pattern="/^[^a-zA-Z]*$/" ng-model-options="{allowInvalid:true, updateOn: 'change'}" required>
+                  <div class="help-block" ng-messages="phoneContactForm.phone.$error" ng-show="!controller.isPristine && phoneContactForm.phone.$error">
                       <p ng-message="required">
                           Gelieve dit veld niet leeg te laten.
                       </p>
