III-929 Copyright has a minimum length of 3 characters

--- a/src/event_form/components/image-edit/event-form-image-edit.html
+++ b/src/event_form/components/image-edit/event-form-image-edit.html
@@ -20,7 +20,7 @@
         <label>Copyright <strong class="text-danger">*</strong></label>
         <input type="text" class="form-control" ng-model="copyrightHolder" required>
         <p class="help-block">
-          Vermeld de naam van de rechtenhoudende fotograaf.</p>
+          Vermeld de naam van de rechtenhoudende fotograaf (minimum 3 karakters).</p>
       </div>
     </div>
 
