--- a/src/event_form/components/image-upload/event-form-image-upload.html
+++ b/src/event_form/components/image-upload/event-form-image-upload.html
@@ -42,7 +42,7 @@
         <label>Copyright <strong class="text-danger">*</strong></label>
         <input type="text" class="form-control" ng-model="copyright" required>
         <p class="help-block">
-            Vermeld de naam van de rechtenhoudende fotograaf. Vul alleen de naam van je eigen vereniging of organisatie in als je zelf de rechten bezit.</p>
+            Vermeld de naam van de rechtenhoudende fotograaf. Vul alleen de naam van je eigen vereniging of organisatie in als je zelf de rechten bezit (minimum 3 karakters).</p>
       </div>
 
       <p class="image-copyright-agreements">
