III-2376 UI translations for calendar summary component

--- a/src/core/components/calendar-summary/calendar-summary.directive.html
+++ b/src/core/components/calendar-summary/calendar-summary.directive.html
@@ -5,27 +5,27 @@
 
     <span ng-if="showOpeningHours">
       <span ng-if="getOpeningHoursCount(offer) == 1">
-        van <span ng-bind="::offer.openingHours[0].startDate | date: 'HH:mm'"></span>
-        tot <span ng-bind="::offer.openingHours[0].endDate | date: 'HH:mm'"></span>
+        {{::translateCalendarSummary('from') | lowercase}} <span ng-bind="::offer.openingHours[0].startDate | date: 'HH:mm'"></span>
+        {{::translateCalendarSummary('till')}} <span ng-bind="::offer.openingHours[0].endDate | date: 'HH:mm'"></span>
       </span>
       <span ng-if="getOpeningHoursCount(offer) > 1">
-        meerdere tijdstippen
+        {{::translateCalendarSummary('openinghours')}}
       </span>
     </span>
   </span>
 
   <span ng-switch-when="multiple">
-     Van <span ng-bind="::offer.startDate | date: 'dd/MM/yyyy'"></span>
-     tot <span ng-bind="::offer.endDate | date: 'dd/MM/yyyy'"></span>
+     {{::translateCalendarSummary('from')}} <span ng-bind="::offer.startDate | date: 'dd/MM/yyyy'"></span>
+     {{::translateCalendarSummary('till')}} <span ng-bind="::offer.endDate | date: 'dd/MM/yyyy'"></span>
   </span>
 
   <span ng-switch-when="periodic">
-     Van <span ng-bind="::offer.startDate | date: 'dd/MM/yyyy'"></span>
-     tot <span ng-bind="::offer.endDate | date: 'dd/MM/yyyy'"></span>
+     {{::translateCalendarSummary('from')}} <span ng-bind="::offer.startDate | date: 'dd/MM/yyyy'"></span>
+     {{::translateCalendarSummary('till')}} <span ng-bind="::offer.endDate | date: 'dd/MM/yyyy'"></span>
   </span>
 
   <span ng-switch-when="permanent">
-     Permanent
+     {{::translateCalendarSummary('permanent')}}
   </span>
 
 </span>
