--- a/src/core/components/image-detail/image-detail.directive.html
+++ b/src/core/components/image-detail/image-detail.directive.html
@@ -1,6 +1,6 @@
 <tr ng-class="::{muted: !images.length}">
     <td>
-        <span class="row-label">Afbeeldingen</span>
+        <span class="row-label">{{translateImageDetail('label')}}</span>
     </td>
     <td ng-if="::images.length">
         <ul class="list-unstyled media-list">
@@ -11,7 +11,7 @@
                     </a>
                 </div>
                 <div class="media-body">
-                   <span ng-if="$first" class="label label-default">Hoofdafbeelding</span>
+                   <span ng-if="$first" class="label label-default">{{translateImageDetail('main_image')}}</span>
                     <p>{{image.description}}</p>
                     <p class="text-muted">&copy; {{image.copyrightHolder}}</p>
                 </div>
@@ -19,5 +19,5 @@
             </li>
         </ul>
     </td>
-    <td ng-if="::!images.length">Geen afbeeldingen</td>
+    <td ng-if="::!images.length">{{translateImageDetail('no_images')}}</td>
 </tr>
