III-2375 UI translations for eventForm (step5)

--- a/src/event_form/components/age/form-age.html
+++ b/src/event_form/components/age/form-age.html
@@ -1,7 +1,7 @@
 <div class="row extra-leeftijd">
     <div class="extra-task" ng-class="{'state-complete': !!fagec.activeAgeRange}">
         <div class="col-sm-3">
-            <em class="extra-task-label">Geschikt voor</em>
+            <em class="extra-task-label" translate="eventForm.step5.age.age_label"></em>
         </div>
         <div class="col-sm-9">
             <span ng-repeat="(type, ageRange) in ::fagec.ageRanges">
