--- a/src/uitpas/components/card-systems/card-systems.html
+++ b/src/uitpas/components/card-systems/card-systems.html
@@ -1,6 +1,6 @@
 <div class="form-group">
     <div class="card-system">
-        <label>Kaartsystemen</label>
+        <label translate="uitpas.cardSystems.card_systems"></label>
 
         <div class="uitpas-card-system row" ng-repeat="cardSystem in cardSystemSelector.availableCardSystems">
             <div class="col-sm-6">
@@ -20,7 +20,7 @@
                 <select ng-model="cardSystem.assignedDistributionKey"
                         ng-options="key as key.name for key in cardSystem.distributionKeys track by key.id"
                         ng-change="cardSystemSelector.distributionKeyAssigned()">
-                    <option value="">--Selecteer een verdeelsleutel--</option>
+                    <option value="" translate="uitpas.cardSystems.choose"></option>
                 </select>
             </div>
         </div>
