--- a/src/uitpas/components/uitpas-info/uitpasInfo.html
+++ b/src/uitpas/components/uitpas-info/uitpasInfo.html
@@ -1,18 +1,18 @@
 <div class="row extra-uitpas" ng-if="showUitpasInfo">
     <div class="extra-task">
         <div class="col-sm-3">
-            <em class="extra-task-label">UiTPAS</em>
+            <em class="extra-task-label" translate="uitpas.uitpasInfo.uitpas"></em>
             <span> </span>
             <i class="fa fa-circle-o-notch fa-spin" ng-show="savingUitpas"></i>
         </div>
         <div class="col-sm-9">
             <div class="alert alert-info" ng-show="!upic.showCardSystems">
-                <p>Dit is een UiTPAS organisator. Selecteer een prijs om specifieke UiTPAS-informatie toe te voegen.</p>
+                <p translate="uitpas.uitpasInfo.uitpas_alert"></p>
             </div>
 
             <div ng-if="upic.showCardSystems">
-                <div class="alert alert-info" role="alert">
-                    Dit is een UiTPAS activiteit.
+                <div class="alert alert-info"
+                     role="alert" translate="uitpas.uitpasInfo.uitpas_info">
                 </div>
 
                 <card-system-selector organisation="upic.organizer" offer-data="upic.eventFormData">
