--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -1,7 +1,7 @@
 
 <div class="modal-header">
     <button type="button" class="close" ng-click="pfmc.cancelEditPrice()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-    <h4 class="modal-title">{{translatePrice('title')}}</h4>
+    <h4 class="modal-title" ng-bind="::translatePrice('title')"></h4>
 </div>
 <div class="modal-body">
 
@@ -13,22 +13,23 @@
                     ng-form="pfmc.priceForm.priceFieldForm">
                     <td ng-switch on="priceInfo.category"
                         class="col-xs-4">
-                        <p ng-switch-when="base" class="form-text">
-                            {{translatePrice('base')}}
+                        <p ng-switch-when="base"
+                           class="form-text"
+                           ng-bind="::translatePrice('base')">
                         </p>
                         <span ng-switch-default>
                             <input type="text"
                                    class="form-control"
                                    name="name"
-                                   placeholder="{{translatePrice('target_group')}}"
+                                   placeholder="{{::translatePrice('target_group')}}"
                                    ng-model="priceInfo.name"
                                    ng-class="{ 'has-error': pfmc.priceForm.priceFieldForm.name.$invalid }"
                                    required />
                         </span>
                     </td>
                     <td class="col-xs-4">
-                        <span ng-if="priceInfo.price === 0">
-                            {{translatePrice('free')}}
+                        <span ng-if="priceInfo.price === 0"
+                              ng-bind="::translatePrice('free')">
                         </span>
                         <span ng-if="priceInfo.price !== 0">
                             <div class="form-inline">
@@ -50,10 +51,14 @@
                         class="col-xs-3">
                         <a class="btn btn-link"
                            ng-click="pfmc.unsetPriceItemFree(key)"
-                           ng-switch-when="0">{{translatePrice('add_price')}}</a>
+                           ng-switch-when="0"
+                           ng-bind="::translatePrice('add_price')">
+                        </a>
                         <a class="btn btn-link"
+                           ng-bind="::translatePrice('free')"
                            ng-click="pfmc.setPriceItemFree(key)"
-                           ng-switch-default>{{translatePrice('free')}}</a>
+                           ng-switch-default>
+                        </a>
                     </td>
                     <td class="col-xs-1">
                         <a aria-hidden="true"
@@ -63,30 +68,38 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a class="btn btn-default" ng-click="pfmc.addPriceItem()">{{translatePrice('add_tarriff')}}</a>
+                        <a class="btn btn-default"
+                           ng-bind="::translatePrice('add_tarriff')"
+                           ng-click="pfmc.addPriceItem()">
+                        </a>
                     </td>
                 </tr>
             </div>
         </table>
     </form>
-    <div ng-show="pfmc.priceError" class="alert alert-danger">
-        {{translatePrice('error')}}
+    <div ng-show="pfmc.priceError"
+         class="alert alert-danger"
+         ng-bind="::translatePrice('error')">
     </div>
     <div ng-show="(pfmc.priceForm.priceFieldForm.price.$invalid || pfmc.priceForm.$invalid) && pfmc.priceForm.priceFieldForm.price.$dirty && !saving" class="alert alert-info">
-        <p>{{translatePrice('invalid')}}</p>
+        <p ng-bind="::translatePrice('invalid')"></p>
         <ul class="small">
-          <li>{{translatePrice('invalid_tip1')}}</li>
-          <li>{{translatePrice('invalid_tip2')}}</li>
-          <li>{{translatePrice('invalid_tip3')}}</li>
+          <li ng-bind="::translatePrice('invalid_tip1')"></li>
+          <li ng-bind="::translatePrice('invalid_tip2')"></li>
+          <li ng-bind="::translatePrice('invalid_tip3')"></li>
         </ul>
     </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" ng-click="pfmc.cancelEditPrice()">{{translatePrice('close')}}</button>
+  <button type="button"
+          class="btn btn-default"
+          ng-bind="::translatePrice('close')"
+          ng-click="pfmc.cancelEditPrice()">
+  </button>
   <button type="button"
           class="btn btn-primary organisator-toevoegen-bewaren"
           ng-click="pfmc.validatePrice()"
           ng-disabled="pfmc.priceForm.$invalid || pfmc.priceForm.$pristine">
-      {{translatePrice('save')}} <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
+      {{::translatePrice('save')}} <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
   </button>
 </div>
